# docs/apifox-full.openapi.json
@@ -41,8 +41,8 @@
       "description": "后台用户管理相关接口"
     },
     {
-      "name": "后台-查询管理",
-      "description": "后台查询管理（查询模板）相关接口"
+      "name": "后台-查询示例",
+      "description": "后台查询示例（查询模板）相关接口"
     },
     {
       "name": "系统",
@@ -2524,12 +2524,12 @@
         }
       }
     },
-    "/api/admin/query-management": {
+    "/api/admin/component-center/list-page": {
       "get": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "查询query-management",
+        "summary": "查询list-page",
         "responses": {
           "200": {
             "description": "成功",
@@ -2555,7 +2555,7 @@
             "description": "服务器错误"
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理",
+        "x-apifox-folder": "后台/组件示例中心/查询示例",
         "security": [
           {
             "cookieAuth": []
@@ -2564,9 +2564,9 @@
       },
       "post": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "创建query-management",
+        "summary": "创建list-page",
         "responses": {
           "200": {
             "description": "成功",
@@ -2603,7 +2603,7 @@
             }
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理",
+        "x-apifox-folder": "后台/组件示例中心/查询示例",
         "requestBody": {
           "required": false,
           "content": {
@@ -2622,12 +2622,12 @@
         ]
       }
     },
-    "/api/admin/query-management/{item_id}": {
+    "/api/admin/component-center/list-page/{item_id}": {
       "get": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "查询query-management",
+        "summary": "查询list-page",
         "responses": {
           "200": {
             "description": "成功",
@@ -2653,7 +2653,7 @@
             "description": "服务器错误"
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理",
+        "x-apifox-folder": "后台/组件示例中心/查询示例",
         "parameters": [
           {
             "name": "item_id",
@@ -2673,9 +2673,9 @@
       },
       "put": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "更新query-management",
+        "summary": "更新list-page",
         "responses": {
           "200": {
             "description": "成功",
@@ -2701,7 +2701,7 @@
             "description": "服务器错误"
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理",
+        "x-apifox-folder": "后台/组件示例中心/查询示例",
         "parameters": [
           {
             "name": "item_id",
@@ -2732,9 +2732,9 @@
       },
       "delete": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "删除query-management",
+        "summary": "删除list-page",
         "responses": {
           "200": {
             "description": "成功",
@@ -2760,7 +2760,7 @@
             "description": "服务器错误"
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理",
+        "x-apifox-folder": "后台/组件示例中心/查询示例",
         "parameters": [
           {
             "name": "item_id",
@@ -2779,12 +2779,12 @@
         ]
       }
     },
-    "/api/admin/query-management/export": {
+    "/api/admin/component-center/list-page/export": {
       "post": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "导出query-management",
+        "summary": "导出list-page",
         "responses": {
           "200": {
             "description": "成功",
@@ -2810,7 +2810,7 @@
             "description": "服务器错误"
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理/导入导出",
+        "x-apifox-folder": "后台/组件示例中心/查询示例/导入导出",
         "requestBody": {
           "required": false,
           "content": {
@@ -2830,9 +2830,9 @@
       },
       "get": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "导出query-management（GET）",
+        "summary": "导出list-page（GET）",
         "responses": {
           "200": {
             "description": "成功",
@@ -2858,7 +2858,7 @@
             "description": "服务器错误"
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理/导入导出",
+        "x-apifox-folder": "后台/组件示例中心/查询示例/导入导出",
         "security": [
           {
             "cookieAuth": []
@@ -2866,12 +2866,12 @@
         ]
       }
     },
-    "/api/admin/query-management/template": {
+    "/api/admin/component-center/list-page/template": {
       "get": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "下载query-management导入模板",
+        "summary": "下载list-page导入模板",
         "responses": {
           "200": {
             "description": "成功",
@@ -2897,7 +2897,7 @@
             "description": "服务器错误"
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理/导入导出",
+        "x-apifox-folder": "后台/组件示例中心/查询示例/导入导出",
         "security": [
           {
             "cookieAuth": []
@@ -2905,12 +2905,12 @@
         ]
       }
     },
-    "/api/admin/query-management/import": {
+    "/api/admin/component-center/list-page/import": {
       "post": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "导入query-management",
+        "summary": "导入list-page",
         "responses": {
           "200": {
             "description": "成功",
@@ -2936,7 +2936,7 @@
             "description": "服务器错误"
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理/导入导出",
+        "x-apifox-folder": "后台/组件示例中心/查询示例/导入导出",
         "requestBody": {
           "required": false,
           "content": {
@@ -2955,12 +2955,12 @@
         ]
       }
     },
-    "/api/admin/query-management/upload-image": {
+    "/api/admin/component-center/list-page/upload-image": {
       "post": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "上传query-management图片",
+        "summary": "上传list-page图片",
         "responses": {
           "200": {
             "description": "成功",
@@ -2986,7 +2986,7 @@
             "description": "服务器错误"
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理/图片",
+        "x-apifox-folder": "后台/组件示例中心/查询示例/图片",
         "requestBody": {
           "required": false,
           "content": {
@@ -3005,12 +3005,12 @@
         ]
       }
     },
-    "/api/admin/query-management/image/{filename}": {
+    "/api/admin/component-center/list-page/image/{filename}": {
       "get": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "访问query-management图片",
+        "summary": "访问list-page图片",
         "responses": {
           "200": {
             "description": "成功",
@@ -3039,7 +3039,7 @@
             "description": "服务器错误"
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理/图片",
+        "x-apifox-folder": "后台/组件示例中心/查询示例/图片",
         "parameters": [
           {
             "name": "filename",
@@ -3058,12 +3058,12 @@
         ]
       }
     },
-    "/api/admin/query-management/upload-file": {
+    "/api/admin/component-center/list-page/upload-file": {
       "post": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "上传query-management附件",
+        "summary": "上传list-page附件",
         "responses": {
           "200": {
             "description": "成功",
@@ -3089,7 +3089,7 @@
             "description": "服务器错误"
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理/文件",
+        "x-apifox-folder": "后台/组件示例中心/查询示例/文件",
         "requestBody": {
           "required": false,
           "content": {
@@ -3108,12 +3108,12 @@
         ]
       }
     },
-    "/api/admin/query-management/file/{filename}": {
+    "/api/admin/component-center/list-page/file/{filename}": {
       "get": {
         "tags": [
-          "后台-查询管理"
+          "后台-查询示例"
         ],
-        "summary": "下载query-management附件",
+        "summary": "下载list-page附件",
         "responses": {
           "200": {
             "description": "成功",
@@ -3142,7 +3142,7 @@
             "description": "服务器错误"
           }
         },
-        "x-apifox-folder": "后台/数据管理/查询管理/文件",
+        "x-apifox-folder": "后台/组件示例中心/查询示例/文件",
         "parameters": [
           {
             "name": "filename",
@@ -3152,6 +3152,165 @@
               "type": "string"
             },
             "description": "路径参数：filename"
+          }
+        ],
+        "security": [
+          {
+            "cookieAuth": []
+          }
+        ]
+      }
+    },
+    "/api/admin/component-center/list-page/run-preview": {
+      "post": {
+        "tags": [
+          "后台-查询示例"
+        ],
+        "summary": "执行list-page预览",
+        "responses": {
+          "200": {
+            "description": "成功",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": true
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "请求参数错误"
+          },
+          "401": {
+            "description": "未授权"
+          },
+          "403": {
+            "description": "无权限"
+          },
+          "500": {
+            "description": "服务器错误"
+          }
+        },
+        "x-apifox-folder": "后台/组件示例中心/查询示例/预览与版本",
+        "requestBody": {
+          "required": false,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "additionalProperties": true
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "cookieAuth": []
+          }
+        ]
+      }
+    },
+    "/api/admin/component-center/list-page/{item_id}/versions": {
+      "get": {
+        "tags": [
+          "后台-查询示例"
+        ],
+        "summary": "查询list-page版本列表",
+        "responses": {
+          "200": {
+            "description": "成功",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": true
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "请求参数错误"
+          },
+          "401": {
+            "description": "未授权"
+          },
+          "403": {
+            "description": "无权限"
+          },
+          "500": {
+            "description": "服务器错误"
+          }
+        },
+        "x-apifox-folder": "后台/组件示例中心/查询示例/预览与版本",
+        "parameters": [
+          {
+            "name": "item_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "路径参数：item_id"
+          }
+        ],
+        "security": [
+          {
+            "cookieAuth": []
+          }
+        ]
+      }
+    },
+    "/api/admin/component-center/list-page/{item_id}/versions/{version_id}/rollback": {
+      "post": {
+        "tags": [
+          "后台-查询示例"
+        ],
+        "summary": "回滚list-page版本",
+        "responses": {
+          "200": {
+            "description": "成功",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "additionalProperties": true
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "请求参数错误"
+          },
+          "401": {
+            "description": "未授权"
+          },
+          "403": {
+            "description": "无权限"
+          },
+          "500": {
+            "description": "服务器错误"
+          }
+        },
+        "x-apifox-folder": "后台/组件示例中心/查询示例/预览与版本",
+        "parameters": [
+          {
+            "name": "item_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "路径参数：item_id"
+          },
+          {
+            "name": "version_id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            },
+            "description": "路径参数：version_id"
           }
         ],
         "security": [
